--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -46,3 +46,20 @@ h1 {
 .navbar-toggle {
 	margin-top:18px;
 }
+.navbar-default .navbar-nav>li>a {
+	border-bottom:1px solid #fff;
+
+}
+.navbar-default .navbar-nav>li>a:hover {
+	background-color:#e6f9ff;
+}
+.navbar-default .navbar-nav>li>a#noline {
+	border-bottom:none;
+}
+.navbar-nav {
+	margin-top:0;
+	margin-bottom:0;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+	border:none;
+}
